--- a/index.html
+++ b/index.html
@@ -2,25 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" type="image/png" href="/static/favicon.ico"/>
+    <link rel="shortcut icon" type="image/png" href="/rede_social/static/favicon.png"/>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="/static/css/materialize.min.css"  media="screen,projection"/>
     <title>GG Easy</title>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
-    <script type="text/javascript" src="/static/js/materialize.min.js"></script>
-    <!-- Navbar Responsiva -->
-    <script type="text/javascript">
-        document.addEventListener('DOMContentLoaded', function() {
-          var elems = document.querySelectorAll('.sidenav');
-          var instances = M.Sidenav.init(elems, {edge: 'left'});
-        });
-    </script>
   </body>
 </html>
